--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Link 1</h5>
                   <p class="card-text">Link download file .MP3 </p>
-                  <p><a target="_blank" href="http://202.162.215.134/aplikasi/2.%20Uji%20Block%20UKK%20TKJ/Heroes-Tonight.mp3"> <strong> Download file .MP3 </strong></a>
+                  <p><a target="_blank" href="https://github.com/skanbara/ukk/releases/download/File/Heroes-Tonight.mp3"> <strong> Download file .MP3 </strong></a>
                   </p>
                 </div>
             </div>
