--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Link 2</h5>
                   <p class="card-text">Link download file .MKV </p>
-                  <p><a target="_blank" href="http://202.162.215.134/aplikasi/2.%20Uji%20Block%20UKK%20TKJ/Heroes-Tonight.mkv"> <strong> Download file .MKV </strong></a>
+                  <p><a target="_blank" href="https://github.com/skanbara/ukk/releases/download/File/Heroes-Tonight.mkv"> <strong> Download file .MKV </strong></a>
                 </div>
             </div>
           </div>
@@ -114,7 +114,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Link 3</h5>
                   <p class="card-text">Link download file .MP4 </p>
-                  <p><a target="_blank" href="http://202.162.215.134/aplikasi/2.%20Uji%20Block%20UKK%20TKJ/Heroes-Tonight.mp4"> <strong> Download file .MP4 </strong></a>
+                  <p><a target="_blank" href="https://github.com/skanbara/ukk/releases/download/File/Heroes-Tonight.mp4"> <strong> Download file .MP4 </strong></a>
                 </div>
             </div>
           </div>
@@ -126,7 +126,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Link 4</h5>
                   <p class="card-text">Link download file .ISO</p>
-                  <p><a target="_blank" href="http://202.162.215.134/aplikasi/2.%20Uji%20Block%20UKK%20TKJ/chr-6.47.9-fresh.iso"> <strong> Download file .ISO </strong></a>
+                  <p><a target="_blank" href="https://github.com/skanbara/ukk/releases/download/File/chr-6.47.9-fresh.iso"> <strong> Download file .ISO </strong></a>
                 </div>
             </div>
           </div>
