--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap" rel="stylesheet">
 
-    <title>TKJ-UKK2025</title>
+    <title>UKK TKJ 2025</title>
   </head>
   <body>
     <!-- Navbar-->
